# picoos

./: .cproject  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  annotated.html  changelog.txt  classes.html  dir_514462e5c6bcf73875565ef6a6ea6ff5.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x63.html  globals_0x65.html  globals_0x68.html  globals_0x69.html  globals_0x6a.html  globals_0x6d.html  globals_0x6e.html  globals_0x70.html  globals_0x72.html  globals_0x73.html  globals_0x74.html  globals_0x75.html  globals_0x76.html  globals_c.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_func.html  globals_h.html  globals_i.html  globals_j.html  globals_m.html  (+75 more)
cmake/: ToolchainGNU-Common.cmake  ToolchainInit.cmake  cmakehelp.txt
cmake/Platform/: picoOS.cmake
examples/: ex_flag1.c  ex_init1.c  ex_init2.c  ex_init3.c  ex_init4.c  ex_mesg2.c  ex_mutx1.c  ex_mutx2.c  ex_sema3.c  ex_sema4.c  ex_task1.c  ex_task3.c  ex_task4.c  ex_timr1.c  ex_timr2.c  files.txt  makefile  noscfg.h  outfile.mak  port.h  poscfg.h  testinfo.txt
examples/apps/: .gitignore  CMakeLists.txt  ex_bhalf.c  ex_flag1.c  ex_flag2.c  ex_flag3.c  ex_flag3_init.c  ex_init5.c  ex_init6.c  ex_lists.c  ex_mesg1.c  ex_mesg2.c  ex_mutx1.c  ex_mutx2.c  ex_sema1.c  ex_sema2.c  ex_sema3.c  ex_sema5.c  ex_sint1.c  ex_task2.c  ex_task4.c  ex_task5.c  ex_timr2.c  makefile  test.c
examples/config/: noscfg.h  port.h  poscfg.h
examples/make/: library.mak  outfile.mak
html/: annotated.html  classes.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  files.html  functions.html  functions_vars.html  globals.html  globals_c.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_func.html  globals_h.html  globals_i.html  globals_j.html  globals_m.html  globals_n.html  globals_p.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  globals_u.html  globals_v.html  globals_vars.html  group__absfunc.html  group__arch.html  group__atomic.html  group__bhalf.html  group__cfgabstr.html  group__cfgcpuu.html  group__cfgnosbh.html  group__cfgnoscio.html  group__cfgnosmem.html  group__cfgnosreg.html  group__codestyle.html  group__confign.html  group__configp.html  (+47 more)
inc/: picoos.h  pos_nano.h
make/: common.mak  compile.mak  doxygen.cfg  doxygen.cfg.in  lib.mak  makehelp.txt  out.mak
make/tools/: mkdir.c  rm.c
ports/6502/: README.md  arch_a.s  arch_c.c  cc65.cmake  port.cmake  port.h  port.mak
ports/6502/default/: noscfg.h  poscfg.h
ports/6502/test/: makefile
ports/arm/: arch_a.s  arch_a_macros.h  arch_c.c  port.h  port.mak  readme.txt
ports/arm/arm7pid/: arm7pid_reg.h  cpu_a.s  cpu_c.c
ports/arm/arm7pid/boot/: crt0.s
ports/arm/arm7pid/default/: noscfg.h  poscfg.h
ports/arm/boot/: crt0-common.s  lpc2129-rom.ld  lpc2129-test.ld  lpc2132-rom.ld  lpc2138-rom.ld  lpccommon-rom.ld
ports/arm/lpc2000/: cpu_a.s  cpu_c.c
ports/arm/lpc2000/boot/: crt0.s
ports/arm/lpc2000/default/: noscfg.h  poscfg.h
ports/arm/samsung/: cpu_a.s  cpu_c.c  samsung_reg.h
ports/arm/samsung/boot/: crt0.s
ports/arm/samsung/default/: noscfg.h  poscfg.h
ports/arm/test/: .gitignore  Makefile  demo.c
ports/avr/: arch_a.s  arch_c.c  port.h  port.mak  readme.txt  timerdef.h
ports/avr/default/: poscfg.h
ports/avr/test/: makefile  mutex.c  mutex_semaphore.c  mutex_summe.c  pingpong.c  rectangle.c  sema_thread_sync.c
ports/cortex-m/: EclipseNotes.txt  GNU.cmake  README.md  arch_c.c  clock_efm32_rtc.c  clock_systick.c  con_itm.c  con_lpc.c  port.cmake  port.h  port.mak  port_ex.h  port_irq.h  readme.txt  tick_systick.c
ports/cortex-m/boot/: cortex.ld
ports/cortex-m/default/: noscfg.h  pos_cmsis.h  poscfg.h
ports/cortex-m/efm32/: clock_rtc.c  con_usart.c  tick_rtc.c
ports/cortex-m/lpc11xx/: con_usart.c
ports/cortex-m/msp432/: con_eusci.c  tick_wdt.c
ports/cortex-m/nrf5/: con_uart.c  tick_rtc.c
ports/cortex-m/stm32/: con_usart.c  tick_rtc.c
ports/cortex-m/tm4c/: con_usart.c
ports/lpc2xxx/: GNU.cmake  README.md  README.txt  arch.c  gcc.cmake  low.s  lpc_reg.h  port.cmake  port.h  port.mak  timer.c  uart.c
ports/lpc2xxx/boot/: arm7tdmi.ld
ports/lpc2xxx/default/: noscfg.h  poscfg.h
ports/msp430/: EclipseNotes.txt  GNU.cmake  MSPGCC.cmake  README.md  arch_c.c  bsp.c  clock_aclk.h  clock_bc2.c  clock_fllplus.c  clock_ucs.c  con_speed.c  con_uart.c  con_usci.c  con_usci_2x4x.c  con_usci_5x6x.c  pmm.c  port.cmake  port.h  port.mak  port_aclk.h  readme.txt  tick_a0.c  tick_wdt.c
ports/msp430/default/: noscfg.h  poscfg.h
ports/mycpu/: arch_a.s  arch_c.c  port.h  port.mak
ports/mycpu/default/: noscfg.h  poscfg.h
ports/mycpu/test/: makefile
ports/pic32/: README.md  arch_c.c  con_uart.c  port.h  port.mak  tick_core.c  tick_timer.c
ports/pic32/default/: noscfg.h  poscfg.h
ports/ppc440/: arch_a.s  arch_c.c  port.h  port.mak
ports/ppc440/boot/: init.c  start.s
ports/ppc440/default/: poscfg.h
ports/ppc440/test/: makefile  sect_gcc.map  sect_mw.map
ports/unix/: README.md  arch_c.c  port.cmake  port.h  port.mak
ports/unix/default/: noscfg.h  poscfg.h
ports/x86dos/: arch_a.asm  arch_c.c  readme.txt
ports/x86dos/test/: build.bat
ports/x86w32/: arch_c.c  port.h  port.mak  readme.txt
ports/x86w32/default/: noscfg.h  poscfg.h
ports/x86w32/test/: makefile
src/nano/: n_bhalf.c  n_conio.c  n_core.c  n_mem.c  n_reg.c  privnano.h
src/pico/: fbit_gen.c  picoos.c
